objects/SBQQ__ErrorCondition__c.object
<CustomObject>
    <customHelpPage>SBQQ__ErrorConditionHelp</customHelpPage>
    <description>Error condition that causes parent Product Rule to fail.</description>
    <fields>
        <fullName>SBQQ__FilterType__c</fullName>
        <description>Type of filtering used in this condition.</description>
        <inlineHelpText>Choose Variable to evaluation this rule against a Summary Variable; otherwise, choose Value.</inlineHelpText>
        <label>Filter Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Variable</fullName>
                </value>
                <value>
                    <fullName>Value</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__FilterValue__c</fullName>
        <inlineHelpText>Enter the value you want the tested variable evaluated against.</inlineHelpText>
        <label>Filter Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__FilterVariable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the Summary Variable you want this rule to evaluate.</inlineHelpText>
        <label>Filter Variable</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Error Conditions (Filter Variable)</relationshipLabel>
        <relationshipName>FilteredConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Operator__c</fullName>
        <inlineHelpText>Choose the operator to use when evaluating your tested selection.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Rule__c</fullName>
        <description>Parent rule for this condition.</description>
        <inlineHelpText>Rule that runs this condition.</inlineHelpText>
        <label>Rule</label>
        <referenceTo>SBQQ__ProductRule__c</referenceTo>
        <relationshipLabel>Error Conditions</relationshipLabel>
        <relationshipName>ErrorConditions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__TestedField__c</fullName>
        <description>Field on the Quote object that should be used in testing this condition.</description>
        <inlineHelpText>Field on the Quote object that should be used in testing this condition.</inlineHelpText>
        <label>Tested Field</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__TestedObject__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Group Line Items</fullName>
                </value>
                <value>
                    <fullName>Unit Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TestedObject__c</fullName>
        <description>Object that contains the field being tested by this condition.</description>
        <inlineHelpText>Specify object that contains tested field.</inlineHelpText>
        <label>Tested Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                </value>
                <value>
                    <fullName>Quote Line</fullName>
                </value>
                <value>
                    <fullName>Product Option</fullName>
                </value>
                <value>
                    <fullName>Configuration Attributes</fullName>
                </value>
                <value>
                    <fullName>Upgraded Asset</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TestedVariable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the summary variable you want this rule to evaluate.</inlineHelpText>
        <label>Tested Variable</label>
        <referenceTo>SBQQ__SummaryVariable__c</referenceTo>
        <relationshipLabel>Error Conditions (Tested Variable)</relationshipLabel>
        <relationshipName>TestedConditions</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Error Condition</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Condition #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Error Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBQQ__Tested_field_or_variable_required</fullName>
        <active>true</active>
        <description>Requires that either Tested Variable or Tested Field be specified.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__TestedField__c,&quot;&quot;),ISBLANK(SBQQ__TestedVariable__c))</errorConditionFormula>
        <errorMessage>You must specify either Tested Field or Tested Variable.</errorMessage>
    </validationRules>
</CustomObject>